added partials head tag.

--- a/views/partials/headTag.ejs
+++ b/views/partials/headTag.ejs
@@ -1,6 +1,6 @@
 <head>
     <title>
-        <%= title %>
+        bubl
     </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
