--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,86 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: burlywood;
+  margin: 0;
+  padding: 0;
+}
+
+#question {
+  position: absolute;
+  display: block;
+  z-index: 1;
+  vertical-align: middle;
+}
+
+#buble {
+  position: absolute;
+  z-index: -1;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.slowfade-in {
+  animation: fadeIn 2s;
+  animation-fill-mode: forwards;
+}
+
+#board {
+  position: relative;
+  margin: auto;
+  padding-left: 2rem;
+  z-index: -7;
+  border-radius: 2rem;
+  background-color: white;
+  height: 48rem;
+  width: 114rem;
+}
+
+header {
+  height: 6rem;
+  width: 100%;
+  background-color: white;
+  display: flex;
+}
+
+ul {
+  margin-top: 1.4rem;
+  justify-content: flex-end;
+}
+
+li {
+  display: inline-block;
+  padding: 15px 30px;
+  vertical-align: middle;
 }
 
 a {
-  color: #00B7FF;
+  text-align: center;
+  color: blueviolet;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.2vw;
+}
+
+a:hover {
+  background-color: brown;
+}
+
+.greeting {
+  position: relative;
+  justify-content: center;
+  text-align: center;
+  border: 2px solid black;
+  position: relative;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: auto;
+}
+
+ul {
+  display: flex;
+  margin: auto;
 }
