--- a/views/index.views.ejs
+++ b/views/index.views.ejs
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
 <%- include('./partials/headTag.ejs') %>
+  <header>
+    <a href="index.html"><img src="bublboardlogo.png" alt="logo"></a>
+  </header>
 
   <body>
     <h1>Welcome!</h1>
