--- a/views/create-board.views.ejs
+++ b/views/create-board.views.ejs
@@ -3,13 +3,14 @@
 <%- include('./partials/headTag.ejs') %>
 
     <body>
-        <h1>Let's get started...</h1>
-        <form action="/board" method="POST">
-            <input type="text" name="title" placeholder="Title">
-            <label for="duration">Duration</label>
-            <input type="number" id="duration" name="duration"> mins
-            <button>Create!</button> <a href="/">Cancel</a>
-        </form>
+        <%- include('./partials/header.ejs') %>
+            <h1>Let's get started...</h1>
+            <form action="/board" method="POST">
+                <input type="text" name="title" placeholder="Title">
+                <label for="duration">Duration</label>
+                <input type="number" id="duration" name="duration"> mins
+                <button>Create!</button> <a href="/">Cancel</a>
+            </form>
     </body>
 
 </html>
