--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,3 @@
 <header>
-    <a href="/"><img src="/images/bublboardlogo.png" alt="logo" /></a>
-
+    <a href="/"><img src="/images/bublboardlogo.png" alt="logo" id="logo" width="160px" height="40px" /></a>
 </header>
