--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,6 @@
 <header>
     <a href="/"><img src="/images/bublboardlogo.png" alt="logo" id="logo" width="160px" height="40px" /></a>
+    <h1 class="greeting" contenteditable="true">
+        <%= title %>
+    </h1>
 </header>
