--- a/views/board.views.ejs
+++ b/views/board.views.ejs
@@ -10,9 +10,13 @@
 
 
                 <div id="board" class="mt-5 col-md-11">
-                    <div id="question" class="slowfade-in"><img id="buble" src="/images/buble.png" alt=""> What is the
-                        value of
-                        pi?</img></div>
+                    <div id="question" class="slowfade-in">
+                        <div class="question-text">
+                            What is the
+                            value of
+                            pi? hhkjhlkgfldl ghfkhj jhgkjhg jlhgkjh kjhg kjhg kjhgk
+                        </div>
+                    </div>
 
 
                 </div>
