added like button to question

--- a/views/board.views.ejs
+++ b/views/board.views.ejs
@@ -10,18 +10,23 @@
 
 
                 <div id="board" class="mt-5 col-md-11">
-                    <div id="question" class="slowfade-in">
+                    <div id="question" class="slowfade-in d-flex flex-column justify-content-center align-items-center">
                         <div class="question-text">
                             What is the
                             value of
                             pi? hhkjhlkgfldl ghfkhj jhgkjhg jlhgkjh kjhg kjhg kjhgk
                         </div>
+                        <button class="btn btn-primary mb-2">like</button>
                     </div>
 
 
                 </div>
 
-                <button class="btn btn-primary">invite link: thisisthelinktothisboard</button>
+                <div class="w-100 d-flex justify-content-center mt-4">
+
+                    <button class="btn btn-primary">invite link: thisisthelinktothisboard</button>
+
+                </div>
 
             </main>
             <%- include('./partials/scripts.ejs') %>
