--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,19 +1,22 @@
 body {
-  background-color: #fff6D6;
+  background-color: #fff6d6;
   margin: 0;
   padding: 0;
 }
 
 #question {
   position: absolute;
-  display: block;
-  z-index: 1;
+  text-align: center;
   vertical-align: middle;
-  border-radius: 50px;
-  border: solid;
+  font-family: Arial, Helvetica, sans-serif;
   background-color: seagreen;
-  max-width: 200px;
- 
+  border-radius: 20rem;
+  height: 20rem;
+  width: 20rem;
+  top: 800px;
+  left: 960px;
+
+  transition: all 0.5s ease-in-out;
 }
 
 .question-text {
