--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,39 @@
-<header>
-    <a href="/"><img src="/images/bublboardlogo.png" alt="logo" id="logo" width="160px" height="40px" /></a>
-    <h1 class="greeting" contenteditable="true">
+<header class="d-flex">
+    <!-- <a class="align-self-start" href="/"><img src="/images/bublboardlogo.png" alt="logo" id="logo" width="160px"
+            height="40px" /></a>
+    <h1 class="h2 align-self-start" contenteditable="true">
         <%= title %>
-    </h1>
+    </h1> -->
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+
+                <img src="/images/bublboardlogo.png" alt="logo" id="logo" width="160px" height="40px" />
+
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">
+                            <%= title %>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </header>
