--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,7 @@
 <header class="d-flex">
-    <!-- <a class="align-self-start" href="/"><img src="/images/bublboardlogo.png" alt="logo" id="logo" width="160px"
-            height="40px" /></a>
-    <h1 class="h2 align-self-start" contenteditable="true">
-        <%= title %>
-    </h1> -->
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
 
                 <img src="/images/bublboardlogo.png" alt="logo" id="logo" width="160px" height="40px" />
 
@@ -16,24 +10,7 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">
-                            <%= title %>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
-                </ul>
-            </div>
+
         </div>
     </nav>
 </header>
