--- a/views/create-board.views.ejs
+++ b/views/create-board.views.ejs
@@ -4,13 +4,41 @@
 
     <body>
         <%- include('./partials/header.ejs') %>
-            <h1>Let's get started...</h1>
-            <form action="/board" method="POST">
-                <input type="text" name="title" placeholder="Title">
-                <label for="duration">Duration</label>
-                <input type="number" id="duration" name="duration"> mins
-                <button>Create!</button> <a href="/">Cancel</a>
-            </form>
+            <main class="vh-100 container d-flex justify-content-center align-items-center">
+                <div class="mb-5" id="form-container">
+                    <div class="m-5">
+                        <h1>Let's get started...</h1>
+                        <form action="/board" method="POST" class="needs-validation" novalidate>
+                            <div class="row">
+                                <div class="col-5">
+                                    <label class="form-label" for="title">Board title:</label>
+                                    <input class="form-control" id="title" type="text" name="title" placeholder="title"
+                                        required>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <label class="form-label" for="duration">Duration in minutes:</label>
+                                <div class="col-5">
+                                    <input class="form-control" type="number" id="duration" name="duration" value="60"
+                                        required>
+                                </div>
+                            </div>
+
+                            <div class="mt-3">
+                                <button class="btn btn-primary">Create!</button> <a class="btn btn-secondary"
+                                    href="/">Cancel</a>
+                            </div>
+                        </form>
+
+
+                    </div>
+
+                </div>
+
+
+            </main>
+
+            <%- include('./partials/scripts.ejs') %>
     </body>
 
 </html>
