--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,15 +1,11 @@
 <header class="d-flex">
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-sm navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
 
                 <img src="/images/bublboardlogo.png" alt="logo" id="logo" width="160px" height="40px" />
 
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
 
         </div>
     </nav>
