--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #fff6d6;
+  background-color: #FFF9E3;
   margin: 0;
   padding: 0;
 }
@@ -99,4 +99,23 @@ ul {
 #form-container {
   background-color: white;
   border-radius: 50px;
+}
+
+
+.btn-primary,
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:visited,
+.btn-primary:focus {
+    background-color: #FFC700;
+    border-color: #FFC700;
+}
+
+.btn-secondary,
+.btn-secondary:hover,
+.btn-secondary:active,
+.btn-secondary:visited,
+.btn-secondary:focus {
+    background-color: #ACBFAF;
+    border-color: #ACBFAF;
 }
