styled index page.

--- a/views/index.views.ejs
+++ b/views/index.views.ejs
@@ -7,13 +7,30 @@
 
     <%- include('./partials/header.ejs') %>
 
-      <h1>Welcome!</h1>
-      <form action="/board/new" method="GET">
-        <input type="text" name="name" placeholder="your name">
-        <button>create new board</button>
-      </form>
+      <main class="container vh-100 d-flex flex-column align-items-center justify-content-center mb-5">
+        <h1 class="mb-3">Welcome!</h1>
+        <div id="form-container">
+
+          <div class="m-5">
+            <form action="/board/new" method="GET" class="needs-validation" novalidate>
+              <label class="form-label" for="name">enter your name and get started</label>
+              <div class="col-10">
+
+                <input class="form-control" type="text" name="name" id="name" placeholder="your name" required>
 
 
+              </div>
+              <button class="btn btn-primary mt-3">create new board</button>
+            </form>
+          </div>
+        </div>
+
+
+
+      </main>
+
+
+      <%- include('./partials/scripts.ejs') %>
   </body>
 
 </html>
