--- a/views/index.views.ejs
+++ b/views/index.views.ejs
@@ -12,12 +12,11 @@
         <div id="form-container">
 
           <div class="m-5">
-            <form action="/board/new" method="GET" class="needs-validation" novalidate>
+            <form id="nameForm" action="/board/new" method="GET" class="needs-validation" novalidate>
               <label class="form-label" for="name">enter your name and get started</label>
               <div class="col-10">
 
                 <input class="form-control" type="text" name="name" id="name" placeholder="your name" required>
-
 
               </div>
               <button class="btn btn-primary mt-3">create new board</button>
